--- a/blackjack_webapp/strategy/templates/index.html
+++ b/blackjack_webapp/strategy/templates/index.html
@@ -7,6 +7,9 @@
     </head>
 
     <body>
+        <a href="{% url 'infinite_bj' %}">Infinite Blackjack</a>
+        <a href="{% url 'setup_things' %}">Set things up</a><br>
+
         Dit is de index pagina van strategy
     </body>
 </html>
