--- a/blackjack_webapp/strategy/templates/infinite_bj.html
+++ b/blackjack_webapp/strategy/templates/infinite_bj.html
@@ -17,36 +17,36 @@
         <h1>Strategy for - Infinite Blackjack - from Evolution Gaming</h1>
 
         <div class="all_suited_cards">
-            {% for heart in hearts %}
+            {% for heart, value in hearts %}
                 <div class="single_cards">
-                    <input type="number" id="{{ heart.image }}_number" class="card_button_number" min="0" step="1" value="0"/>
+                    <input type="number" id="{{ heart.image }}_number" class="card_button_number" min="0" step="1" value="{{ value }}"/>
                     <input type="image" id="{{ heart.image }}_image" class="card_button_image" src="/static/cards_jpgs/{{ heart.image }}" alt="{{ heart }}" onclick="minus_card('{{ heart.image }}');">
                 </div>
             {% endfor %}
         </div>
 
         <div class="all_suited_cards">
-            {% for diamond in diamonds %}
+            {% for diamond, value in diamonds %}
                 <div class="single_cards">
-                    <input type="number" id="{{ diamond.image }}_number" class="card_button_number" min="0" step="1" value="0"/>
+                    <input type="number" id="{{ diamond.image }}_number" class="card_button_number" min="0" step="1" value="{{ value }}"/>
                     <input type="image" id="{{ diamond.image }}_image" class="card_button_image" src="/static/cards_jpgs/{{ diamond.image }}" alt="{{ diamond }}" onclick="minus_card('{{ diamond.image }}');">
                 </div>
             {% endfor %}
         </div>
 
         <div class="all_suited_cards">
-        {% for spade in spades %}
+        {% for spade, value in spades %}
             <div class="single_cards">
-                <input type="number" id="{{ spade.image }}_number" class="card_button_number" min="0" step="1" value="0"/>
+                <input type="number" id="{{ spade.image }}_number" class="card_button_number" min="0" step="1" value="{{ value }}"/>
                 <input type="image" id="{{ spade.image }}_image" class="card_button_image" src="/static/cards_jpgs/{{ spade.image }}" alt="{{ spade }}" onclick="minus_card('{{ spade.image }}');">
             </div>
         {% endfor %}
         </div>
 
         <div class="all_suited_cards">
-        {% for club in clubs %}
+        {% for club, value in clubs %}
             <div class="single_cards">
-                <input type="number" id="{{ club.image }}_number" class="card_button_number" min="0" step="1" value="0"/>
+                <input type="number" id="{{ club.image }}_number" class="card_button_number" min="0" step="1" value="{{ value }}"/>
                 <input type="image" id="{{ club.image }}_image" class="card_button_image" src="/static/cards_jpgs/{{ club.image }}" alt="{{ club }}" onclick="minus_card('{{ club.image }}');">
             </div>
         {% endfor %}
