--- a/blackjack_webapp/strategy/templates/index.html
+++ b/blackjack_webapp/strategy/templates/index.html
@@ -7,8 +7,7 @@
     </head>
 
     <body>
-        <a href="{% url 'infinite_bj' %}">Infinite Blackjack</a>
-        <a href="{% url 'setup_things' %}">Set things up</a><br>
+        <a href="{% url 'infinite_blackjack' %}">Infinite Blackjack</a>
 
         Dit is de index pagina van strategy
     </body>
